Enable VirtualMachineTest and CodeGenTest to automatically update their test files
This will make changes that affect large numbers of tests much less painful.